# haskell-sdk

./: .gitignore  README.md  cabal.project  stack.yaml
.github/actions/setup-haskell/: action.yml
.github/workflows/: ci.yml  release.yml
client/: Changelog.md  README.md  package.yaml  utxorpc-client.cabal  utxorpc-haskell-client.cabal
client/app/: Main.hs  SimpleLogger.hs
client/example/: KatipLogger.hs  Main.hs  SimpleLogger.hs
client/quick-start/: Main.hs
client/src/: Client.hs  Logging.hs  Types.hs
client/src/Utxorpc/: Client.hs  Logged.hs  Types.hs
client/test/: logged_test.hs
server/: Changelog.md  README.md  certificate.pem  key.pem  package.yaml  utxorpc-haskell-server.cabal  utxorpc-server.cabal
server/example/: BuildImpl.hs  EmptyHandlers.hs  KatipLogger.hs  Main.hs  NullHandlers.hs  QueryImpl.hs  SimpleLogger.hs  SubmitImpl.hs  SyncImpl.hs  WatchImpl.hs
server/src/: Build.hs  Logged.hs  Logging.hs  Server.hs  Submit.hs  Sync.hs  Watch.hs
server/src/Utxorpc/: Build.hs  Logged.hs  Query.hs  Server.hs  Submit.hs  Sync.hs  Watch.hs
server/test/: logged_test.hs
server/tests/: logged_test.hs
