cabal-version: 3.0

name:           utxorpc-client
version:        0.1.0.0
synopsis:       An SDK for clients of the UTxO RPC specification.
description:    This SDK includes helper functions for creating a UTxO gRPC client, calling UTxO RPC methods, and logging every interaction.
category:       Network, Blockchain, Cardano
homepage:       https://github.com/utxorpc/utxorpc-client#readme
bug-reports:    https://github.com/utxorpc/utxorpc-client/issues
author:         Dominic Mayhew
maintainer:     dominic.j.mayhew@gmail.com
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/utxorpc/haskell-sdk

library
  exposed-modules:
    Utxorpc.Client
    Utxorpc.Types
  other-modules:
    Utxorpc.Logged
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
  build-depends:
      base >=4.7 && <5
    , bytestring
    , http2-client
    , http2-client-grpc
    , http2-grpc-proto-lens
    , http2-grpc-types
    , proto-lens
    , utxorpc
    , uuid
  default-language: Haskell2010

executable client-example
  main-is:
    Main.hs
  other-modules:
    SimpleLogger
    KatipLogger
  hs-source-dirs:
    example
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , case-insensitive
    , katip
    , http2
    , http2-client
    , http2-client-grpc
    , http2-grpc-types >= 0.5.0.0 && < 0.6
    , lens
    , proto-lens
    , safe
    , time
    , transformers
    , unliftio
    , utxorpc-client
    , uuid
  default-language: Haskell2010

executable client-quick-start
  main-is:
    Main.hs
  hs-source-dirs:
    quick-start
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
  build-depends:
    , base >=4.7 && <5
    , bytestring
    , lens
    , proto-lens
    , unliftio
    , utxorpc
    , utxorpc-client
  default-language: Haskell2010
