cabal-version: 3.0

name:           utxorpc-server
version:        0.1.0.0
synopsis:       An SDK for UTxO RPC services.
description:    This SDK includes helper functions for creating a UTxO RPC service with automated logging.
category:       Network, Blockchain, Cardano
homepage:       https://github.com/utxorpc/haskell-sdk#readme
bug-reports:    https://github.com/utxorpc/haskell-sdk/issues
author:         Dominic Mayhew
maintainer:     dominic.j.mayhew@gmail.com
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/utxorpc/haskell-sdk

library
  exposed-modules:
      Utxorpc.Server
  other-modules:
      Utxorpc.Build
      Utxorpc.Submit
      Utxorpc.Sync
      Utxorpc.Watch
      Utxorpc.Logged
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
  build-depends:
    , base >=4.7 && <5
    , bytestring
    , http2-grpc-proto-lens
    , http2-grpc-types
    , utxorpc
    , uuid
    , wai
    , warp
    , warp-grpc
    , warp-tls
  default-language: Haskell2010

executable server-example
  main-is:
    Main.hs
  other-modules:
    BuildImpl
    KatipLogger
    EmptyHandlers
    SimpleLogger
    SubmitImpl
    SyncImpl
    WatchImpl
  hs-source-dirs:
    example
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
  build-depends:
    aeson
    , base >= 4.7 && < 5
    , bytestring
    , case-insensitive
    , http2-grpc-types
    , katip
    , lens
    , proto-lens
    , time
    , transformers
    , unliftio
    , utxorpc
    , utxorpc-server
    , uuid
    , wai
    , warp
    , warp-grpc
    , warp-tls
  default-language: Haskell2010

test-suite logged_test_server
  type:
    exitcode-stdio-1.0
  main-is:
    logged_test.hs
  other-modules:
    Utxorpc.Logged
  hs-source-dirs:
    test
    src
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
  build-depends:
    , base >=4.7 && <5
    , bytestring
    , directory
    , http2-grpc-proto-lens
    , http2-grpc-types
    , hspec
    , proto-lens
    , transformers
    , utxorpc
    , uuid
    , wai
    , warp-grpc
  default-language: Haskell2010
